# BMO-aws

./: .gitignore  BMO-project_file1  README.md  pyproject.toml  python.py  version.py
audit_test/: Audit_Testing.sql
cdk/: README.md  app.py  config.py  package-lock.json  package.json
cdk/base_stacks/: __init__.py  storage_stack.py
cdk/lake_stacks/: __init__.py  base_pipeline.py  lake_stack.py
cdk/pipeline_stacks/: __init__.py  pipeline_config.py  us_ghg_emission_daily.py  us_ghg_emission_monthly.py  usghgemission_daily_config.py  usghgemission_monthly_config.py
cdk/pkg/: common_policy.py  glue_helpers.py  glue_step_helpers.py  iam_helpers.py  lambda_helpers.py  s3_helpers.py
data/: sampledata_withchecksum.sh
ddl/audit/: audit.sql
ddl/landing/: utility_data_in.sql  utility_data_oh.sql
ddl/processed/: utility_emissions_daily.sql  utility_emissions_monthly.sql
src/commons/audit/usghgemission_monthly/audit_config/: audit_config.json
src/commons/audit/usghgemission_monthly/j2_sql/: templated_audit.jinja2.sql
src/commons/execute_athena_query/: exec_athena_query.py  execute_batch_ddl_athena_j2sql.py
src/commons/execute_athena_query/macros/: audit.jinja2
src/commons/sql_templatize/audit_table_config_generator/: audit_config_generator.py  config.py
src/workflow_trigger_lambda/: config.py  create_done_file.py  workflow_trigger.py
src/workflow_trigger_lambda/common/: log_utils.py
src/workflow_trigger_lambda/pipeline_meta/: state_emission_daily.json  state_emission_monthly.json
(+3 files in other folders)
