[tool.poetry]
name = "datalake-athena-pipeline-pattern"
version = "1.0.0"
description = "APG Athena Pipelines with Audit"
authors = ["Virendhar Sivaraman <virendha@amazon.com>","BEHERA, SHIBASHIS <behersh@amazon.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
"aws-cdk-lib" = ">=2.125.0,<3.0.0"
"constructs" = ">=10.0.0,<11.0.0"
cdk-nag = "^2.28.27"
aws-cdk-aws-glue-alpha = "^2.125.0a0"
aiohttp = ">=3.9.2"
setuptools = ">=70.0.0"
urllib3 = ">=1.26.17"


[poetry.group.dev.dependencies]
requests = "^2.31.0"
awswrangler = "3.5.1" # 2.15.1 matchs version on Glue Python Shell
mypy = "^1.3.0"
pylint = "^3.0.0"
black = "^24.1.1"
boto3 = "^1.34.16"
Jinja2 = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0","setuptools>=70"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true
